--- a/src/Data/Images/Image.css
+++ b/src/Data/Images/Image.css
@@ -45,7 +45,7 @@
 
   @media (max-width:500px){
     .img_text_centered {
-      font-size: 17px;
+      font-size: 15px;
     }
   }
 
