--- a/src/pages/Profile/profilePage.css
+++ b/src/pages/Profile/profilePage.css
@@ -17,6 +17,15 @@
     }
 }
 
+@media(max-width: 700px){
+    .ProfileDescContainer{
+        
+        width:100%;
+        padding:0;
+        margin:0;
+    }
+}
+
 
 .pic11{
     width:80px; 
@@ -144,3 +153,19 @@ height:300px;
     height:300px;
 }
 
+
+@media (max-width:600px){
+    .carousel ,.slide{
+        height:500px;
+        width:100%;
+        /* max-width:600px; */
+
+    }
+    .carousel-caption{
+       
+        top:5%;
+        
+    }
+
+    
+}
